# vfs

./: Cargo.toml
cache-read-seek/: Cargo.toml
cache-read-seek/src/: lib.rs
libarchive-sys/: Cargo.toml  build.rs
vfs/: Cargo.toml
vfs-http/: Cargo.toml
vfs-http/src/: lib.rs
vfs-http/tests/: test.rs
vfs-libarchive/: Cargo.toml
vfs-libarchive/src/: lib.rs
vfs-libarchive/tests/: test.rs
vfs-local/: Cargo.toml
vfs-local/src/: lib.rs
vfs-meta/: Cargo.toml
vfs-meta/src/: lib.rs  parser.rs
vfs-meta/tests/: test.rs
vfs/src/: lib.rs
